2017-10-02  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* src/openvassd.c (check_kb_status): Add comment about the use of the
	function kb_no_empty().

2017-09-27  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* Changelog: Add info to the last entry.

2017-09-27  Juan Jose Nicola  <juan.nicola@greenbone.net>

	Backport r29680 with adjustments due to code changes.

	* src/openvassd.c (check_kb_status): New function. Check if Redis
        Server is up and if the KB exists. If KB does not exist force a reload.
        (main_loop): Call new function.


2017-09-12  Juan Jose Nicola  <juan.nicola@greenbone.net>

	Backport r29548.

	* src/attack.c: Define PROGRESS_BAR_STYLE.
	(attack_host): Add preprocessor directives to switch the progress
	bar style. In case of a dead host, it sends max_ports = -1 to the
	manager, and it will not be taken into account to calculate the scan
	progress.

2017-09-11  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/pluginload.c: Revert r29045.

2017-09-08  Juan Jose Nicola  <juan.nicola@greenbone.net>

	Backport r29523 with adjustments due to code change.

	* src/openvassd.c: Include ../misc/vendorversion.h.
	(main) Add new command line option vendor-version. Set vendor_version
	if it was passed as parameter.

2017-09-05  Juan Jose Nicola  <juan.nicola@greenbone.net>

	Backport r28157 with adjustments due to code changes.

	A connection failures to the redis-server is considered fatal to the
	running scan, meaning that it is stopped immediately and send an
	'Error' result.

	* src/attack.c: Define new error type ERR_REDIS_CONN.
	(launch_plugin): Check access to the knowledge base. If a
	problem is found, return an error and the running scan is stoped.
	(attack_host): Adds an item to the host knowledge base. After launch
	the plugin check if there was an error trying to connect to the
	redis-server. In that case send a error message.

2017-07-12  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r28888.
