@@ -85,7 +85,6 @@ struct attack_start_args
 {
   struct arglist *globals;
   struct in6_addr hostip;
-  char *host_mac_addr;
   plugins_scheduler_t sched;
   int thread_socket;
   int parent_socket;
@@ -609,12 +608,7 @@ attack_start (struct attack_start_args *args)
   kb_t *net_kb = args->net_kb;
 
   nvticache_reset ();
-  /* Stringify the IP address. */
-  if (args->host_mac_addr)
-    host_str = g_strdup (args->host_mac_addr);
-  else
-    host_str = addr6_as_str (&args->hostip);
-  g_free (args->host_mac_addr);
+  host_str = addr6_as_str (&args->hostip);
   close (args->parent_socket);
   thread_socket = args->thread_socket;
   gettimeofday (&then, NULL);
@@ -1078,19 +1072,8 @@ attack_network (struct arglist *globals, kb_t *network_kb)
         {
           int pid;
           struct attack_start_args args;
-          char *MAC = NULL, *txt_ip;
+          char *txt_ip;
           int soc[2];
-
-          if (prefs_get_bool ("use_mac_addr") && v6_is_local_ip (&host_ip))
-            {
-              if (v6_get_mac_addr (&host_ip, &MAC) > 0)
-                {
-                  /* remote host is down */
-                  g_free (hostname);
-                  host = openvas_hosts_next (hosts);
-                  continue;
-                }
-            }
 
           if (socketpair (AF_UNIX, SOCK_STREAM, 0, soc) < 0)
             goto scan_stop;
@@ -1101,14 +1084,12 @@ attack_network (struct arglist *globals, kb_t *network_kb)
             {
               close (soc[0]);
               close (soc[1]);
-              g_free (MAC);
               g_free (hostname);
               continue;
             }
           args.globals = globals;
           memcpy (&args.hostip, &host_ip, sizeof (struct in6_addr));
           args.fqdn = hostname;
-          args.host_mac_addr = MAC;
           args.sched = sched;
           args.thread_socket = soc[0];
           args.parent_socket = soc[1];
@@ -1126,8 +1107,6 @@ attack_network (struct arglist *globals, kb_t *network_kb)
                   /* Forking failed - we go to the wait queue. */
                   log_write ("fork() failed - %s. %s won't be tested",
                              strerror (errno), hostname);
-                  if (MAC)
-                    g_free (MAC);
                   goto stop;
                 }
 
@@ -1145,7 +1124,6 @@ attack_network (struct arglist *globals, kb_t *network_kb)
           else
             log_write ("Testing %s (%s) [%d]", hostname, txt_ip, pid);
          g_free (txt_ip);
-         g_free (MAC);
         }
 
       num_tested++;
